fix boos, add photos, create validator
